     see queues.conf.sample for details.
  * app_queue now has a 'loose' option which is almost exactly like 'strict' except it
     does not count paused queue members as unavailable.
  * Added min-announce-frequency option to queues.conf which allows you to control the
     minimum amount of time between queue announcements for use when the caller's queue
     position changes frequently.

MeetMe Changes
--------------
  * The 'o' option to provide an optimization has been removed and its functionality 
     has been enabled by default.

Miscellaneous 
-------------

  * Added the bindaddr option to gtalk.conf.
  * Argument support for Gosub application
  * Ability to set process limits without restarting Asterisk
  * SS7 support in chan_zap (via libss7 library)
  * Proper codec support in chan_skinny.
  * AEL upgraded to use the Gosub with Arguments instead
     of Macro application, to hopefully reduce the problems
     seen with the artificially low stack ceiling that 
     Macro bumps into. Macros can only call other Macros
     to a depth of 7. Tests run using gosub, show depths
     limited only by virtual memory. A small test demonstrated
     recursive call depths of 100,000 without problems.
  * Ability to use libcap to set high ToS bits when non-root
     on Linux. If configure is unable to find libcap then you
     can use --with-cap to specify the path.
  * H323 remote hold notification support added (by NOTIFY message
     and/or H.450 supplementary service)
  * Added rotatetimestamp option to logger.conf which will use
     the time to name the logger files instead of sequence number.
  * Added Masquerade manager event for when a masquerade happens between
     two channels.
  * From the to-do lists: straighten out the app timeout args:
     Wait() app now really does 0.3 seconds- was truncating arg to an int.
     WaitExten() same as Wait().
     Congestion() - Now takes floating pt. argument.
     Busy() - now takes floating pt. argument.